# vrx_bridge

./: CMakeLists.txt  README.md  package.xml
config/: go.yaml  vrx.rviz
include/vrx_bridge/: vrx_bridge_component.hpp
launch/: vrx_bringup.launch.xml
src/: vrx_bridge_component.cpp  vrx_bridge_node.cpp
