<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vrx_bridge</name>
  <version>0.0.0</version>
  <description>exchange sensor message from vrx to simulator</description>
  <maintainer email="kenntabsk@gmail.com">kokamoto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geographic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>

  <launch>
  <!-- component container(動的にノードを載せられるExecutor)を用意 --> <!--動的に載せられるノードとは？-->
    <node_container pkg="rclcpp_components" exec="component_container_mt" name="pub_sub_container" namespace="pub_sub" args="">
      <node pkg="opencv_components" exec="opencv_marc_match" name="marc_match" namespace="match">
      </node>
    </node_container>
  </launch>


  <test_depend>ouxt_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>